--- a/force-app/main/default/lwc/vdt_orgConnection/vdt_orgConnection.html
+++ b/force-app/main/default/lwc/vdt_orgConnection/vdt_orgConnection.html
@@ -2,7 +2,7 @@
     <div class="container">
         <lightning-layout multiple-rows horizontal-align="center">
             <lightning-layout-item>
-                <div class="title">Select Veeva Org</div>
+                <div class="title">Select CRM Org</div>
             </lightning-layout-item>
             <lightning-layout-item size="12">
                 <lightning-combobox
