--- a/force-app/main/default/lwc/vdt_workspace/vdt_workspace.html
+++ b/force-app/main/default/lwc/vdt_workspace/vdt_workspace.html
@@ -27,5 +27,8 @@
         <template if:true={showVaultDocuments}>
             <c-vdt_vault></c-vdt_vault>
         </template>
+        <template if:true={showVaultUserKpis}>
+            <c-vdt_vault-user-kpis></c-vdt_vault-user-kpis>
+        </template>
     </div>
 </template>
